Uses anonymous profile icon now

--- a/frontend/chat/chat.tpl.html
+++ b/frontend/chat/chat.tpl.html
@@ -6,7 +6,7 @@
     <div class="row" id="chatdisplay">
         <ul class="chatmessages">
             <li ng-repeat="msg in $ctrl.messages">
-                <img src="/assets/iconmonstr-speech-bubble-26.svg" height="32px" width="32px"/>
+                <img src="/assets/images/icons/anonymous-icon.png" height="32px" width="32px"/>
                 <span>{{msg.timestamp | date: 'HH:mm:ss'}}</span>
                 <span>{{msg.sender}}</span>
                 <br/>
