--- a/frontend/chat/chatsidebar.tpl.html
+++ b/frontend/chat/chatsidebar.tpl.html
@@ -48,6 +48,13 @@
                             </ul>
                         </div>
                     </uib-tab>
+
+                    <uib-tab index="2" heading="Files">
+                        <div id="file_selector">
+                            <h4>Files</h4>
+                            <filelist></filelist>
+                        </div>
+                    </uib-tab>
                 </uib-tabset>
 
             </div>
