Improved: Moved embed options to user service

--- a/frontend/chat/chat.tpl.html
+++ b/frontend/chat/chat.tpl.html
@@ -45,7 +45,7 @@
                         <span class="message-timestamp"><small>{{timestamp * 1000| date:'mediumTime'}}</small></span>
                         <br/>
                         <ng-embed embed-data="msg.content"
-                                  embed-options="$ctrl.embed_options">
+                                  embed-options="$ctrl.user.embed_options">
                             <!--embed-template-url="template.html" -->
                         </ng-embed>
                     </div>
