--- a/frontend/chat/chatsidebar.tpl.html
+++ b/frontend/chat/chatsidebar.tpl.html
@@ -26,7 +26,8 @@
                                     </a>
                                 </li>
                             </ul>
-                            <a href="#!/editor/chatchannel//create" class="btn btn-default" role="button">Add channel</a>
+                            <a href="#!/editor/chatchannel//create" class="btn btn-default" role="button">Add
+                                channel</a>
                         </div>
                     </uib-tab>
 
@@ -38,7 +39,8 @@
                                     <img src="/assets/images/icons/anonymous-icon.png" height="24px" width="24px"/>
                                     <a ng-click="$ctrl.switch_user(uuid)">{{user.name}}</a>
                                     <a ng-hide="user.profile.userdata === null" ng-click="isExpanded = !isExpanded">
-                                        <i class="fa" ng-class="{'fa-chevron-right': !isExpanded, 'fa-chevron-down': isExpanded}"></i>
+                                        <i class="fa"
+                                           ng-class="{'fa-chevron-right': !isExpanded, 'fa-chevron-down': isExpanded}"></i>
                                     </a>
 
                                     <div uib-collapse="!isExpanded">
